Do not check ProxyInfo if the the DRP config is not valid

A previous CL (https://codereview.chromium.org/1702253002)
made a change and called result->proxy_server() without
checking if DRP config is valid. This caused Chrome
to crash because if config is not valid, calling result-
>proxy_server() may cause crashes (because there may not be
any proxy server in result).

This CL reverts back to behavior before that CL. Before
result->proxy_server() is called, it is ensured that the
DRP config must be valid.

BUG=591356

Review URL: https://codereview.chromium.org/1756323002

Cr-Commit-Position: refs/heads/master@{#379048}

Former-commit-id: 50eb58711b04bd731486974488e46546bf45b0bb